# workshop-api-ejemplo-fastapi

./: README.md  main.py  pyproject.toml  settings.py
app/: db.py  main.py  schemas.py  services.py
docs/: workshop-local.postman_environment.json  workshop.postman_collection.json
