[tool.poetry]
name = "workshop-api-ejemplo-fastapi"
version = "0.1.0"
description = ""
authors = ["eandrade <edmon.af@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.41"}
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
databases = "^0.6.2"
aiosqlite = "^0.17.0"
email-validator = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
